♻️ remove s3 download file extension
Co-authored-by: who-hoo <who.ho3ov@gmail.com>